--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -1341,7 +1341,6 @@
                         plans: places.flatMap(function (place, index) {
                             return place.map(function (subPlace, subIndex) {
                                 return {
-                                    userId: subPlace.userId,
                                     day: index + 1, // day 값 설정
                                     order: subIndex + 1, // order 값 설정
                                     contentId: subPlace.contentid
@@ -1350,12 +1349,13 @@
                         })
                     }), // 전송할 데이터
                     success: function (response) { // 요청이 성공적으로 완료되었을 때 실행될 함수
-                        var p_id = response.p_id; // 응답에서 p_id 추출
+                        var p_id = response.plannerId; // 응답에서 p_id 추출
                         // p_id를 파라미터로 포함하는 새로운 URL로 페이지 이동
                         window.location.href = '/plan/show?p_id=' + p_id;
                         console.log('성공');
                     },
                     error: function (xhr, status, error) { // 요청이 실패했을 때 실행될 함수
+                        console.log(xhr, status, error);
                         alert('실패');
                     }
                 });
