관심리뷰/북마크 api 수정

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -1288,7 +1288,7 @@
             location.href = '../login'
         }else {
             $.ajax({
-                url : `/api/likes/${reviewId}`,
+                url : `/api/like/${reviewId}`,
                 type : 'POST',
                 success : function (result){
                     const likeCount = result.likeCount;
@@ -1446,7 +1446,7 @@
             }
         })
         $.ajax({
-            url : `/api/likes/${selectedReviewId}`,
+            url : `/api/like/${selectedReviewId}`,
             type : 'GET',
             success : function (result){
                 const likeCount = result.likeCount;
