--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -737,7 +737,7 @@
             location.href = '../login'
         }else {
             $.ajax({
-                url : `/api/likes/${reviewId}`,
+                url : `/api/like/${reviewId}`,
                 type : 'POST',
                 success : function (result){
                     const likeCount = result.likeCount;
@@ -895,7 +895,7 @@
             }
         })
         $.ajax({
-            url : `/api/likes/${selectedReviewId}`,
+            url : `/api/like/${selectedReviewId}`,
             type : 'GET',
             success : function (result){
                 const likeCount = result.likeCount;
