--- a/src/main/resources/templates/review/reviewbook.html
+++ b/src/main/resources/templates/review/reviewbook.html
@@ -709,7 +709,7 @@
             location.href = '../login'
         }else {
             $.ajax({
-                url : `/api/likes/${reviewId}`,
+                url : `/api/like/${reviewId}`,
                 type : 'POST',
                 success : function (result){
                     const likeCount = result.likeCount;
@@ -867,7 +867,7 @@
             }
         })
         $.ajax({
-            url : `/api/likes/${selectedReviewId}`,
+            url : `/api/like/${selectedReviewId}`,
             type : 'GET',
             success : function (result){
                 const likeCount = result.likeCount;
